feat: libsecp256k1 Java FFM bindings
Signed-off-by: Anthony Petrov <anthony@swirldslabs.com>